Fixed Test, And added method save(momnent)